2010-04-27
 Added command line options to control PDF options. [FR 5008]

2010-04-27
 Removed support for Postscript output.

2010-04-27
 Handle an empty .eskilrc. [Bug 17113]
 Moved packages pstools and psballoon into GIT repository.

2010-02-13
 Do git add after conflict merge of a git file.
 Select colors for PDF print.

2009-11-02
 Detect and display annotation in patches. E.g. when using -p with diff.

2009-10-17
 Return in rev field does a redo diff. [FR 4649]
 Allow zero lines of context to only show diffs.

2009-02-12
 Allow stepping down in directory diff.
 Experiment to display less in directory diff.
 Require 8.5. Misc cleanup to use that fact.
 Perforce support. (Elliot)

2009-01-23
 Don't save unchanged preferences to prefs file.
 Better documentation for plugins.
 Added plugin dump.

Release 2.4

2009-01-08
 Added backslash plugin.

2009-01-07
 Better handling of negative Subversion revisions

2008-11-19
 Bug fix in Clip Diff Capture

2008-11-10
 Improved patch parsing.
 Includ Twapi in windows executable

2008-11-06
 Added Capture in Clip Diff on Windows.
 Handle Rev and Plugin at the same time.

2008-09-23
 Added log button for version control.
 Added commit for Subversion.
 Added log view for CVS and Subversion.
 Do not parse GIT revisions.

2008-05-23
 Started on plugins.

2008-04-09
 Added color option for unchanged text.

2008-03-07
 Added -review to do full tree view like a patch.

2008-03-05
 Support for Bazaar.

2008-02-07
 Support for Mercurial.

2008-02-06
 Fixed a bug in patch view. A change last in patch was missed.

2008-01-23
 Added Subversion support.
 Added -cvs and -svn for selecting version detection preference.

2008-01-18
 Adjust to use Tile overall.
 Adjustments to new dirdiff processing.

2007-12-26
 Complete rework of directory diff window.
 Requires Tile.

2007-12-09
 Support command line "-" to read a patch from std input.

Release 2.3

2007-12-05
 Added option for wide map. (Code from Elliot)

2007-11-27